<resources>
    <string name="app_name">Charotar Explore</string>
    <string name="logoDesc">Charotar Explore</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="welcome">WELCOME TO</string>
    <string name="name">CHAROTAR EXPLORE</string>
    <string name="title_activity_signin">signin</string>
    <string name="mobile">Mobile number</string>
    <string name="passwd">Password</string>
    <string name="newuser">New user? Click here</string>
    <string name="title_activity_signup">signup</string>
    <string name="cpasswd">Confirm password</string>
    <string name="reuser">Already registered? Click here</string>
    <string name="uname">Name</string>
    <string name="sinw">SIGN INTO</string>
    <string name="supw">REGISTER WITH</string>
    <string name="link">http://192.168.43.245/CharotarExplore/api/</string>
    <string name="title_activity_home">home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="signout">Signout</string>
    <string name="village">select your destination</string>
    <string name="dharmaj">Dharmaj</string>
    <string name="petlad">Petlad</string>
    <string name="vvnagar">V. V. Nagar</string>
    <string name="anand">Anand</string>
    <string name="title_activity_category">category</string>
    <string name="looking">what you are looking for</string>
    <string name="title_activity_result">result</string>
    <string name="title_activity_details">details</string>
    <string name="share">Share app</string>
    <string name="favorite">Favourites</string>
    <string name="about">About</string>
    <string name="away">KMs</string>
    <string name="type">Type</string>
    <string name="kathyavadi">Kathiyavadi</string>
    <string name="punjabi">Punjabi</string>
    <string name="mexican">Mexican</string>
    <string name="chinese">Chinese</string>
    <string name="si">South Indian</string>
    <string name="gujarati">Gujarati</string>
    <string name="title_activity_feedback">feedback</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="submit">Submit</string>
    <string name="feedback">Feedback</string>
    <string name="khambhat">Khambhat</string>
</resources>
