<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.harshil.charotarexplore.home"
    tools:showIn="@layout/app_bar_home">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:text="@string/village"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textback"
                android:onClick="onCatClick"
                android:padding="10dp"
                android:tag="1"
                android:text="@string/dharmaj"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/textback"
                android:onClick="onCatClick"
                android:padding="10dp"
                android:tag="2"
                android:text="@string/petlad"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/textback"
                android:onClick="onCatClick"
                android:padding="10dp"
                android:tag="3"
                android:text="@string/vvnagar"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/textback"
                android:onClick="onCatClick"
                android:padding="10dp"
                android:tag="4"
                android:text="@string/anand"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/textback"
                android:onClick="onCatClick"
                android:padding="10dp"
                android:tag="5"
                android:text="@string/khambhat"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="25sp" />

        </LinearLayout>

    </ScrollView>

    <!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="application submitted by:"
            android:textAlignment="center"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Smit Patel | Vaibhav Rana"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>
    -->
</RelativeLayout>
